--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href='{% static "vendor/select2/dist/css/select2.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/multiple-select/multiple-select.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/nvd3/build/nv.d3.css"%}'>
+    <link rel="stylesheet" href='{% static "vendor/angular-datatables/dist/css/angular-datatables.min.css"%}'>
 </head>
 <body>
 
@@ -58,9 +59,9 @@
     {% block content %}
     {% endblock content %}
 </div>
-<script type="text/javascript" src='{% static "vendor/jquery/jquery.min.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/jquery/dist/jquery.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/bootstrap/dist/js/bootstrap.min.js" %}'></script>
-<script type="text/javascript" src='{% static "vendor/datatables/media/js/jquery.dataTables.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/datatables/media/js/jquery.dataTables.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/datatables/media/js/dataTables.bootstrap.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/datatables-fixedcolumns/js/dataTables.fixedColumns.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/datatables-fixedheader/js/dataTables.fixedHeader.js" %}'></script>
@@ -77,6 +78,7 @@
 <script type="text/javascript" src='{% static "vendor/angular-nvd3/dist/angular-nvd3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/angular-datatables/dist/angular-datatables.min.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/filterService.js" %}'></script>
