added months of stock left

--- a/dashboard/static/app/components/stock/monthsstockleft.html
+++ b/dashboard/static/app/components/stock/monthsstockleft.html
@@ -1,6 +1,35 @@
-<div ng-controller="MonthsStockLeftController">
-    <h4 class="text-center">STOCK LEFT</h4>
-    <div class="page_graph">
-        <angular-chart options="options"></angular-chart>
+<div ng-controller="MonthsStockLeftController as vm">
+    <h4 class="text-center">MONTHS OF STOCK LEFT</h4>
+
+
+    <div class="col-md-6">
+        <div class="page_graph">
+            <nvd3 options="vm.options" data="vm.graph"></nvd3>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+
+       <div id="custom-search-input">
+                <div class="input-group col-md-12">
+                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-danger" type="button">
+                            <span class=" glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                </div>
+           </div>
+
+       <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
+
+            <tr ng-repeat="row in $data | filter:searchText">
+                <td title="'District'" sortable="'stock_requirement__district__name'"  >{{row.stock_requirement__district__name}}</td>
+                <td title="'At Hand'" sortable="'at_hand'" >{{row.at_hand | number:0}}</td>
+                <td title="'Max'" sortable="'stock_requirement__maximum'" >{{row.stock_requirement__maximum}}</td>
+                <td title="'Months Left'" sortable="'stock_left'" >{{row.stock_left}}</td>
+            </tr>
+
+        </table>
     </div>
 </div>
