--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -14,18 +14,13 @@
 
        <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
+                    <input type="text" data-ng-model="searchDistrict">
                 </div>
-           </div>
+       </div>
 
        <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
 
-            <tr ng-repeat="row in $data | filter:searchText">
+            <tr ng-repeat="row in $data | filter:searchDistrict">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
                 <td title="'At Hand'" sortable="'at_hand'" >{{row.at_hand | number:0}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" >{{row.stock_requirement__minimum}}</td>
