--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -88,6 +88,7 @@
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/monthsstockleftController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/stock/consumptionController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/surveillance/surveillanceController.js" %}'></script>
 
 
