--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -7,8 +7,8 @@
         <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'AConsumption'" sortable="consumed" >{{row.consumed | number:0}}</td>
-                <td title="'PConsumption'"></td>
+                <td title="'Actual Consumption'" sortable="consumed" >{{row.consumed | number:0}}</td>
+                <td title="'Planned Consumption'"></td>
             </tr>
 
         </table>
