--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -1,4 +1,4 @@
-<div ng-controller="ConsumptionController as vm">
+<div ng-controller="StockController as vm">
 
     <div class="col-md-6">
         <div class="page_graph">
