--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
-                <a ui-sref="stock.Distribution">
+                <a ui-sref="stock.distribution">
                     <span class="quality_test__metric"> 0</span>
                     <span class="quality_test__description">{{"Distribution" | uppercase}}</span>
                 </a>
