--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -1,9 +1,7 @@
 <div ng-controller="StockController as vm">
 
     <div class="col-md-6">
-        <div class="page_graph">
-            <nvd3 options="vm.options" data="vm.graph"></nvd3>
-        </div>
+    
     </div>
     <div class="col-md-6">
 
@@ -17,9 +15,9 @@
 
             <tr ng-repeat="row in $data | filter:searchDistrict">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'Consumption'" sortable="'consumed'" >{{row.consumed | number:0}}</td>
-                <td title="'Received'" sortable="'received'" >{{row.received | number:0}}</td>
-                <td title="'Uptake Rate'" sortable="''" >{{(row.consumed/row.received)*100 | number:0}}%</td>
+                <td title="'Issues'" sortable="'issues'" >{{row.received | number:0}}</td>
+                <td title="'Max'" sortable="'stock_requirement__maximum'" >{{row.stock_requirement__maximum}}</td>
+                <td title="'Min'" sortable="'stock_requirement__minimum'" >{{row.stock_requirement__minimum}}</td>
             </tr>
 
         </table>
