Minor JavaScript fixes

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -59,7 +59,7 @@
     {% block content %}
     {% endblock content %}
 </div>
-<script type="text/javascript" src='{% static "vendor/jquery/dist/jquery.min.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/jquery/jquery.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/bootstrap/dist/js/bootstrap.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/datatables/media/js/jquery.dataTables.min.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/datatables/media/js/dataTables.bootstrap.min.js" %}'></script>
