added graphs for distribution and months of stock left

--- a/dashboard/static/app/components/stock/monthsstockleft.html
+++ b/dashboard/static/app/components/stock/monthsstockleft.html
@@ -1,14 +1,14 @@
 
-<div ng-controller="StockController as vm">
+<div ng-controller="MonthsStockLeftController as vm">
 
     <h4 class="text-left">MONTHS OF STOCK LEFT</h4>
 
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
 
        <div id="custom-search-input">
                 <div class="input-group col-md-12">
