--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -1,9 +1,11 @@
-<div ng-controller="StockController as vm">
+<div ng-controller="DistributionController as vm">
 
-    <div class="col-md-6">
-    
+    <div class="col-md-12">
+        <div class="page_graph">
+            <nvd3 options="vm.options" data="vm.graph"></nvd3>
+        </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
 
        <div id="custom-search-input">
                 <div class="input-group col-md-12">
