--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -43,8 +43,8 @@
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.distribution">
-                    <span class="quality_test__metric"> 0</span>
-                    <span class="quality_test__description">{{"Distribution" | uppercase}}</span>
+                    <span class="quality_test__metric"> {{ child.child.noissues | number:0 }}%</span>
+                    <span class="quality_test__description">{{"Did Not Receive Stock" | uppercase}}</span>
                 </a>
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
