--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -1,16 +1,16 @@
 <div ng-controller="ConsumptionController as vm">
 
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
         <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
-                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
+                <td title="'Months'" sortable="'period'"  >{{row.period}}</td>
                 <td title="'Actual Consumption'" sortable="consumed" >{{row.consumed | number:0}}</td>
-                <td title="'Planned Consumption'">{{row.targets }}</td>
+                <td title="'Planned Consumption'">{{row.stock_requirement__target }}</td>
             </tr>
 
         </table>
