cosmetic changes for better visualisation

--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -1,5 +1,7 @@
 <div ng-controller="ConsumptionController as vm">
 
+    <h4 class="text-center" >Consumption for {{child.vaccine }} for {{child.district }}</h4>
+
     <div class="col-md-12">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
@@ -9,7 +11,7 @@
         <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
                 <td title="'Months'" sortable="'period'"  >{{row.period}}</td>
-                <td title="'Actual Consumption'" sortable="consumed" >{{row.consumed | number:0}}</td>
+                <td title="'Actual Consumption'" sortable="consumed" >{{row.consumed*600 | number:0}}</td>
                 <td title="'Planned Consumption'">{{row.stock_requirement__target }}</td>
             </tr>
 
