--- a/dashboard/static/app/components/stock/monthsstockleft.html
+++ b/dashboard/static/app/components/stock/monthsstockleft.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="MonthsStockLeftController as vm">
 
-    <h4 class="text-left">MONTHS OF STOCK LEFT</h4>
+    <h4 class="text-center">Months Of Stock Left for {{child.vaccine }} for {{child.themonth }}</h4>
 
     <div class="col-md-12">
         <div class="page_graph">
