--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -1,5 +1,7 @@
 <div ng-controller="DistributionController as vm">
 
+    <h4 class="text-center">Distribution for {{child.vaccine }} for {{child.themonth }}</h4>
+
     <div class="col-md-12">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
