--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="StockController as vm">
 
-    <h4 class="text-left">STOCK ON HAND</h4>
+    <h4 class="text-center">Stock On Hand for {{child.vaccine }} for {{child.themonth }}</h4>
 
     <div class="col-md-12">
         <div class="page_graph">
