--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,11 +1,13 @@
 <div ng-controller="UptakeRateController as vm">
 
-    <div class="col-md-6">
+    <h4 class="text-center" >Uptake Rate for {{child.vaccine }} for {{child.district }}</h4>
+
+    <div class="col-md-12">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
 
        <div id="custom-search-input">
                 <div class="input-group col-md-12">
