--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -9,8 +9,8 @@
         <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
                 <td title="'Months'" sortable="'period'"  >{{row.period}}</td>
-                <td title="'Actual Consumption'" sortable="consumed" >{{row.consumed | number:0}}</td>
-                <td title="'Planned Consumption'">{{row.stock_requirement__target }}</td>
+                <td title="'Actual Consumption'" class="text-center" sortable="consumed" >{{row.consumed | number:0}}</td>
+                <td title="'Planned Consumption'" class="text-center">{{row.stock_requirement__target }}</td>
             </tr>
 
         </table>
