--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -17,9 +17,9 @@
 
             <tr ng-repeat="row in $data | filter:searchDistrict">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'Issues'" sortable="'issues'" >{{row.received | number:0}}</td>
-                <td title="'Max'" sortable="'stock_requirement__maximum'" >{{row.stock_requirement__maximum}}</td>
-                <td title="'Min'" sortable="'stock_requirement__minimum'" >{{row.stock_requirement__minimum}}</td>
+                <td title="'Issues'" sortable="'issues'" class="text-center" >{{row.received | number:0}}</td>
+                <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center">{{row.stock_requirement__maximum}}</td>
+                <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center">{{row.stock_requirement__minimum}}</td>
             </tr>
 
         </table>
