--- a/dashboard/static/app/components/stock/monthsstockleft.html
+++ b/dashboard/static/app/components/stock/monthsstockleft.html
@@ -25,9 +25,9 @@
 
             <tr ng-repeat="row in $data | filter:searchText">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'At Hand'" sortable="'at_hand'" >{{row.at_hand | number:0}}</td>
-                <td title="'Max'">{{row.stock_requirement__maximum}}</td>
-                <td title="'Months Left'" sortable="'stock_left'" >{{row.at_hand/row.stock_requirement__maximum | number:0}}</td>
+                <td title="'At Hand'" sortable="'at_hand'" class="text-center" >{{row.at_hand | number:0}}</td>
+                <td title="'Max'" class="text-center">{{row.stock_requirement__maximum}}</td>
+                <td title="'Months Left'" sortable="'stock_left'" class="text-center" >{{row.at_hand/row.stock_requirement__maximum | number:0}}</td>
             </tr>
 
         </table>
