--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -17,13 +17,13 @@
                 </div>
        </div>
 
-       <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
-
+       <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped"  show-filter="true">
+            <col align="right">
             <tr ng-repeat="row in $data | filter:searchDistrict">
                 <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'At Hand'" sortable="'at_hand'" >{{row.at_hand | number:0}}</td>
-                <td title="'Min'" sortable="'stock_requirement__minimum'" >{{row.stock_requirement__minimum}}</td>
-                <td title="'Max'" sortable="'stock_requirement__maximum'" >{{row.stock_requirement__maximum}}</td>
+                <td title="'At Hand'" sortable="'at_hand'" class="text-center" >{{row.at_hand | number:0}}</td>
+                <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center" >{{row.stock_requirement__minimum}}</td>
+                <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center" >{{row.stock_requirement__maximum}}</td>
             </tr>
 
         </table>
