--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -2,17 +2,25 @@
 <div ng-controller="StockController as vm">
 
     <h4 class="text-center">Stock On Hand for {{child.vaccine }} for {{child.themonth }}</h4>
+    <br>
+    <br>
 
-    <div class="col-md-12">
+    <div class="col-md-6">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-6">
+        <span class='dist_faclty_toggle' ng-model="show_fclties1" ng-init="show_fclties1=false" ng-click="showF(1)">
+            <span class='active' id='d_shw1'>&nbsp;&nbsp;STOCKED OUT&nbsp;&nbsp;</span>
+            <span id='f_shw1'>&nbsp;&nbsp;BELOW MINIMUM &nbsp;&nbsp;</span>
+            <span id='f_shw2'>&nbsp;&nbsp;WITHIN RANGE &nbsp;&nbsp;</span>
+            <span id='f_shw3'>&nbsp;&nbsp;ABOVE MAXIMUM &nbsp;&nbsp;</span>
+        </span>
     <br>
        <div id="custom-search-input">
-                <div class="input-group col-md-12">
+                <div class="input-group col-md-6">
                     <input type="text" data-ng-model="searchDistrict">
                 </div>
        </div>
