Distribution and Consumption Graphs

--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -53,12 +53,12 @@
                     <span class="quality_test__description">{{"CONSUMPTION" | uppercase}}</span>
                 </a>
             </div>
-            <div class="quality_test" ui-sref-active="quality_test_active">
+            <!--<div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.monthsleft">
                     <span class="quality_test__metric"> {{ child.child.belowminimum | number:0 }}%</span>
                     <span class="quality_test__description">{{"Below Minimum Stock Level" | uppercase}}</span>
                 </a>
-            </div>
+            </div>-->
 
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.uptakerate">
