--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -1,6 +1,6 @@
 <div ng-controller="DistributionController as vm">
 
-    <h4 class="text-center">Distribution for {{child.vaccine }} for {{child.themonth }}</h4>
+    <h4 class="text-center">Distribution for {{child.vaccine }} for {{child.district }}</h4>
 
     <div class="col-md-6">
         <div class="page_graph">
@@ -18,7 +18,7 @@
        <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
 
             <tr ng-repeat="row in $data | filter:searchDistrict">
-                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
+                <td title="'District'" sortable="'district_name'"  >{{row.stock_requirement__district__name}}</td>
                 <td title="'Issues'" sortable="'issues'" class="text-center" >{{row.received | number:0}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center">{{row.stock_requirement__maximum}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center">{{row.stock_requirement__minimum}}</td>
