--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -7,10 +7,11 @@
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
-        <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
+    <div ng-controller="StockController as vm" class="col-md-6">
+
+        <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
-                <td title="'Months'" sortable="'period'"  >{{row.period}}</td>
+                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
                 <td title="'Actual Consumption'" sortable="consumed"  class="text-center">{{row.consumed | number:0}}</td>
                 <td title="'Planned Consumption'" class="text-center">{{row.stock_requirement__target }}</td>
             </tr>
