--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -7,7 +7,7 @@
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div ng-controller="StockController as vm" class="col-md-6">
 
        <div id="custom-search-input">
                 <div class="input-group col-md-6">
@@ -15,10 +15,10 @@
                 </div>
        </div>
 
-       <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
+       <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
 
             <tr ng-repeat="row in $data | filter:searchDistrict">
-                <td title="'District'" sortable="'district_name'"  >{{row.stock_requirement__district__name}}</td>
+                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
                 <td title="'Issues'" sortable="'issues'" class="text-center" >{{row.received | number:0}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center">{{row.stock_requirement__maximum}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center">{{row.stock_requirement__minimum}}</td>
