--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -7,7 +7,7 @@
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-6">
+    <div ng-controller="StockController as vm" class="col-md-6">
 
        <div id="custom-search-input">
                 <div class="input-group col-md-6">
@@ -15,15 +15,13 @@
                 </div>
        </div>
 
-       <table ng-table="vm.tableParams" class="row-border hover table table-condensed table-striped" show-filter="true">
+       <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
 
             <tr ng-repeat="row in $data | filter:searchDistrict">
-                <td title="'Month'" sortable="'period'"  >{{row.period}}</td>
+                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
                 <td title="'Consumption'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
                 <td title="'Received'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
                 <td title="'Uptake Rate'" sortable="''" class="text-center" >{{(row.consumed/row.received)*100 | number:0}}%</td>
-                <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center" >{{row.stock_requirement__minimum}}</td>
-                <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center" >{{row.stock_requirement__maximum}}</td>
             </tr>
 
         </table>
