--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,28 +1,27 @@
 <div ng-controller="UptakeRateController as vm">
 
-    <h4 class="text-center" >Uptake Rate for {{child.vaccine }} for {{child.district }}</h4>
+    <h4 class="text-left" >Uptake Rate for {{child.vaccine }} for {{child.district }}</h4>
 
-    <div class="col-md-6">
+    <div class="col-md-7">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div ng-controller="StockController as vm" class="col-md-6">
+    <div ng-controller="StockController as vm" class="col-md-5">
 
        <div id="custom-search-input">
-                <div class="input-group col-md-6">
-                    <input type="text" data-ng-model="searchDistrict">
-                </div>
+           <div class="input-group col-md-5">
+               <input type="text" data-ng-model="searchDistrict" placeholder="search districts">
+           </div>
        </div>
 
        <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
-
-            <tr ng-repeat="row in $data | filter:searchDistrict">
-                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
-                <td title="'Consumption'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
-                <td title="'Received'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
-                <td title="'Uptake Rate'" sortable="''" class="text-center" >{{(row.consumed/row.received)*100 | number:0}}%</td>
-            </tr>
+           <tr ng-repeat="row in $data | filter:searchDistrict">
+               <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
+               <td title="'Consumption'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
+               <td title="'Received'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
+               <td title="'Uptake Rate'" sortable="'uptake_rate'"  >{{row.uptake_rate}}%</td>
+           </tr>
 
         </table>
     </div>
