--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -1,17 +1,19 @@
 <div ng-controller="ConsumptionController as vm">
 
-    <h4 class="text-center" >Consumption for {{child.vaccine }} for {{child.district }}</h4>
+    <h4 class="text-left" >Consumption of {{child.vaccine }} for {{child.district }}</h4>
+    <br>
+    <br>
 
-    <div class="col-md-6">
+    <div class="col-md-7">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div ng-controller="StockController as vm" class="col-md-6">
+    <div ng-controller="StockController as vm" class="col-md-5">
 
         <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
-                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
+                <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}"  >{{row.district_name}}</td>
                 <td title="'Actual Consumption'" sortable="consumed"  class="text-center">{{row.consumed | number:0}}</td>
                 <td title="'Planned Consumption'" class="text-center">{{row.stock_requirement__target }}</td>
             </tr>
