--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -1,24 +1,20 @@
 <div ng-controller="DistributionController as vm">
 
-    <h4 class="text-center">Distribution for {{child.vaccine }} for {{child.district }}</h4>
+    <h4 class="text-left">Distribution of {{child.vaccine }} for {{child.district }}</h4>
+    <br>
+    <br>
 
-    <div class="col-md-6">
+    <div class="col-md-7">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div ng-controller="StockController as vm" class="col-md-6">
-
-       <div id="custom-search-input">
-                <div class="input-group col-md-6">
-                    <input type="text" data-ng-model="searchDistrict">
-                </div>
-       </div>
+    <div ng-controller="StockController as vm" class="col-md-5">
 
        <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
 
-            <tr ng-repeat="row in $data | filter:searchDistrict">
-                <td title="'District'" sortable="'district_name'"  >{{row.district_name}}</td>
+            <tr ng-repeat="row in $data">
+                <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}"  >{{row.district_name}}</td>
                 <td title="'Issues'" sortable="'issues'" class="text-center" >{{row.received | number:0}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center">{{row.stock_requirement__maximum}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center">{{row.stock_requirement__minimum}}</td>
