--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,6 +1,6 @@
 <div ng-controller="UptakeRateController as vm">
 
-    <h4 class="text-left" >Uptake Rate for {{child.vaccine }} for {{child.district }}</h4>
+    <h4 class="text-left" >Uptake Rate of {{child.vaccine }} for {{child.district }}</h4>
 
     <div class="col-md-7">
         <div class="page_graph">
@@ -10,7 +10,7 @@
     <div ng-controller="StockController as vm" class="col-md-5">
 
       <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
-          <tr ng-repeat="row in $data | filter:searchDistrict">
+          <tr ng-repeat="row in $data">
               <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}" >{{row.district_name}}</td>
               <td title="'Consumption'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
               <td title="'Received'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
