combined all the functionality into one stock controller

--- a/dashboard/static/app/components/stock/consumption.html
+++ b/dashboard/static/app/components/stock/consumption.html
@@ -1,4 +1,4 @@
-<div ng-controller="ConsumptionController as vm">
+<div ng-controller="StockController as vm">
 
     <h4 class="text-left" >Consumption of {{child.vaccine }} for {{child.district }}</h4>
     <br>
@@ -6,16 +6,17 @@
 
     <div class="col-md-7">
         <div class="page_graph">
-            <nvd3 options="vm.options" data="vm.graph"></nvd3>
+            <nvd3 options="vm.optionsConsumption" data="vm.graphConsumption"></nvd3>
         </div>
     </div>
-    <div ng-controller="StockController as vm" class="col-md-5">
+    <div class="col-md-5">
 
         <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
             <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}"  >{{row.district_name}}</td>
-                <td title="'Actual Consumption'" sortable="consumed"  class="text-center">{{row.consumed | number:0}}</td>
-                <td title="'Planned Consumption'" class="text-center">{{row.stock_requirement__target }}</td>
+                <td title="'Actual'" sortable="'consumed'"  class="text-center">{{row.consumed | number:0}}</td>
+                <td title="'Planned'" sortable="'stock_requirement__target'" class="text-center">{{row.stock_requirement__target }}</td>
+                <td title="'Coverage'" sortable="'coverage_rate'" class="text-center">{{row.coverage_rate }}%</td>
             </tr>
 
         </table>
