--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -1,20 +1,20 @@
-<div ng-controller="UptakeRateController as vm">
+<div ng-controller="StockController as vm">
 
     <h4 class="text-left" >Uptake Rate of {{child.vaccine }} for {{child.district }}</h4>
 
     <div class="col-md-7">
         <div class="page_graph">
-            <nvd3 options="vm.options" data="vm.graph"></nvd3>
+            <nvd3 options="vm.optionsUptake" data="vm.graphUptake"></nvd3>
         </div>
     </div>
-    <div ng-controller="StockController as vm" class="col-md-5">
+    <div class="col-md-5">
 
       <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
           <tr ng-repeat="row in $data">
               <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}" >{{row.district_name}}</td>
               <td title="'Consumption'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
               <td title="'Received'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
-              <td title="'Uptake Rate'" sortable="'uptake_rate'"  >{{row.uptake_rate}}%</td>
+              <td title="'Uptake'" sortable="'uptake_rate'"  >{{row.uptake_rate}}%</td>
            </tr>
 
       </table>
